tests/ui/parser/diff-markers/item.stderr
error: encountered diff marker
  --> $DIR/item.rs:1:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ between this marker and `=======` is the code being merged into
LL | fn foo() {}
LL | =======
   | ------- between this marker and `>>>>>>>` is the incoming code
LL | fn bar() {}
LL | >>>>>>> branch
   | ^^^^^^^ this marker concludes the conflict region
   |
   = note: conflict markers indicate that a merge was started but could not be completed due to merge conflicts
           to resolve a conflict, keep only the code you want and then delete the lines containing conflict markers
   = note: for an explanation on these markers from the `git` documentation:
           visit <https://git-scm.com/book/en/v2/Git-Tools-Advanced-Merging#_checking_out_conflicts>

error: aborting due to 1 previous error

