tests/ui/parser/diff-markers/item.rs
<<<<<<< HEAD //~ ERROR encountered git conflict marker
fn foo() {}
=======
fn bar() {}
>>>>>>> branch

fn main() {
    foo();
}
